@@ -140,6 +140,17 @@ The file probably has the AC3 codec, which ChromeOS does not decode. Try to get 
   </li>
 
 
+  <li>
+    <span class="question">
+      How do I skip a file, or only download one file, or change file download order?
+    </span>
+    <span class="answer">
+      <p>
+You can skip downloading files or choose to download only a single file by right clicking in the Files tab. You can skip downloading a file by selecting "Skip Download". To download only a single file, use shift+click to select other files and "Skip" them.
+      </p> 
+    </span>
+  </li>
+
   
   <li>
     <span class="question">
