@@ -5,7 +5,7 @@
     "short_name": "__MSG_extName__",
     "description": "__MSG_extDescription__",
     "author": "Kyle Graehl",
-    "version": "2.3.16",
+    "version": "2.3.20",
     "manifest_version": 2,
     "offline_enabled": true,
     "minimum_chrome_version": "33",
@@ -34,6 +34,7 @@
     "permissions": [
         {"fileSystem":["write","directory","retainEntries"]},
         "contextMenus",
+        "alarms",
         "storage",
         "unlimitedStorage",
         "system.storage",
@@ -47,6 +48,7 @@
         "https://*/",
         "identity",
         "browser",
+        "background",
         {"mediaGalleries":["read"]}
     ],
     "optional_permissions": [
