@@ -1,4 +1,6 @@
 2016-04-10
+- show notification when app updates
+- add an action "get app" to files list
 - replace calls to window.open with chrome.browser.openTab
 - try to make "Open" in files tab work better, instead replace with link to issue tracker.
 
